--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
   <div>
      <h1 id="tel" onclick="jump_tel()"></h1>
   </div>
+  <div>
+    <h2> 主 QQ:   1840082568  </h2>    
+  </div>
+  <div>
+    <h2> 备 QQ:   3359865314  </h2>    
+  </div>
+  <div>
+    <h2> 备 QQ:   2395647429  </h2>    
+  </div>
   
   <script type="text/javascript">
     
