--- a/index.html
+++ b/index.html
@@ -2,13 +2,21 @@
 <html>
 <head>
   <title>神州玩志</title>
+  <style type="text/css">
+    .s-link {
+      cursor: pointer;
+      color: deepskyblue;
+      font-weight: bold;
+    }
+  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
   <div>
-     <h1 id="web" onclick="jump_web()"></h1>
+     <h1 id="web" class="s-link" onclick="jump_web()"></h1>
   </div>
   <div>
-     <h1 id="tel" onclick="jump_tel()"></h1>
+     <h1 id="tel" class="s-link" onclick="jump_tel()"></h1>
   </div>
   <div>
     <h2> 主 QQ:   1840082568  </h2>    
