--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 </head>
 <body>
   <div>
+    <h1>神州玩志</h1>
+  </div>
+  <div>
      <h1 id="web" class="s-link" onclick="jump_web()"></h1>
   </div>
   <div>
@@ -27,6 +30,11 @@
   <div>
     <h2> 备 QQ:   2395647429  </h2>    
   </div>
+  <div>
+    <h2> Telegram:   gmg99991 </h2>    
+  </div>
+  
+   
   
   <script type="text/javascript">
     
